fixed overlapping elemenets

--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -85,7 +85,7 @@ a {
       top: 0;
       left: 0;
       background-color: var(--primary);
-      z-index: 100;
+      z-index: 1000;
       width: 100%;
       height: 100vh;
       justify-content: center;
